--- a/index.html
+++ b/index.html
@@ -15,7 +15,14 @@
       <p>Photographer and Designer</p>
     </header>
 
-    <section></section>
+    <section class="image_1"></section>
+    <section class="image_2"></section>
+    <section class="image_3"></section>
+    <section class="image_4"></section>
+    <section class="image_5"></section>
+    <section class="image_6"></section>
+    <section class="image_7"></section>
+    <section class="image_8"></section>
 
     <footer>
       <a href="#">Email</a>
