--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <footer>
       <a href="#">Email</a>
-      <a href="#">Twiiter</a>
+      <a href="#">Twitter</a>
       <a href="#">Instagram</a>
     </footer>
     
